Updated models and added DB seeding

--- a/PropertyTrackerWebAPI/PropertyTrackerWebAPI/appsettings.json
+++ b/PropertyTrackerWebAPI/PropertyTrackerWebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NeonDB": "Host=ep-autumn-pond-a9p2ygzd-pooler.gwc.azure.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_L0zAkGZvj7qB;SSL Mode=Require;Trust Server Certificate=true;"
+  }
 }
