Simple login functionality with JWT
JWT login using Email and PW

--- a/PropertyTrackerWebAPI/PropertyTrackerWebAPI/appsettings.json
+++ b/PropertyTrackerWebAPI/PropertyTrackerWebAPI/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NeonDB": "Host=ep-autumn-pond-a9p2ygzd-pooler.gwc.azure.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_L0zAkGZvj7qB;SSL Mode=Require;Trust Server Certificate=true;"
+  },
+  "Jwt": {
+    "Key": "ybL+W7jvL4ZUJRO3VlmxM5EjZ8T1NEqr2gsEGeH6U0Y=,",
+    "Issuer": "http://localhost:7188",
+    "Audience": "http://localhost:*",
+    "ExpirationMinutes": 60
   }
 }
