--- a/property-tracker-frontend/package.json
+++ b/property-tracker-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/leaflet": "^1.9.18",
     "@types/react-router-dom": "^5.3.3",
+    "framer-motion": "^12.18.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.522.0",
     "react": "^19.1.0",
