--- a/PropertyTrackerWebAPI/PropertyTrackerWebAPI/appsettings.json
+++ b/PropertyTrackerWebAPI/PropertyTrackerWebAPI/appsettings.json
@@ -12,7 +12,7 @@
   "Jwt": {
     "Key": "ybL+W7jvL4ZUJRO3VlmxM5EjZ8T1NEqr2gsEGeH6U0Y=,",
     "Issuer": "http://localhost:7188",
-    "Audience": "http://localhost:*",
+    "Audiences": [ "http://localhost:5173", "http://localhost:5174", "http://localhost:5175", "http://localhost:5176", "http://localhost:5177" ],
     "ExpirationMinutes": 60
   }
 }
