--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - backend
 
   backend:
-    build: ./PropertyTrackerWebAPI
-    ports:
-      - "5000:5000"
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Production
+  build: ./PropertyTrackerWebAPI/PropertyTrackerWebAPI
+  ports:
+    - "5000:5000"
+  environment:
+    - ASPNETCORE_ENVIRONMENT=Production
