--- a/property-tracker-frontend/Dockerfile
+++ b/property-tracker-frontend/Dockerfile
@@ -1,10 +1,18 @@
-# frontend/Dockerfile
+# Stage 1: Build the React app with Vite
 FROM node:18 AS build
 WORKDIR /app
-COPY . .
-RUN npm install && npm run build
 
+COPY package*.json ./
+RUN npm install
+
+COPY . .
+RUN npm run build
+
+# Stage 2: Serve the built app using nginx
 FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
+
+# Expose port 80 (optional)
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
