--- a/property-tracker-frontend/src/.env
+++ b/property-tracker-frontend/src/.env
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=http://propertytracker-backend:5000/api
+VITE_API_BASE_URL=https://localhost:5000/api
 
 # REPLACE AFTER TESTING IN DOCKER VITE_API_BASE_URL=https://localhost:7188/api
